fix: overflow on 'not engaged' stamp

--- a/assets/styles/src/base/_globals.scss
+++ b/assets/styles/src/base/_globals.scss
@@ -39,6 +39,7 @@ h1, h2, h3 {
 
   [lang="ru-RU"] & {
     font-family: var(--font-family-cyrillic);
+    letter-spacing: -2px;
   }
 }
 
