--- a/assets/styles/src/utilities/_typography.scss
+++ b/assets/styles/src/utilities/_typography.scss
@@ -108,4 +108,5 @@
 
 .overflow-wrap-anywhere {
   overflow-wrap: anywhere;
+  hyphens: auto;
 }
